[package]
name = "vox-bounded-fs"
description = "UTF-8 file reads capped by vox-scaling-policy max_file_bytes_hint (shared across workspace crates)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
vox-scaling-policy = { workspace = true }

tokio = { workspace = true, optional = true }
workspace-hack = { workspace = true }

[features]
default = []
async = ["dep:tokio"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
