[package]
name = "vox-browser"
description = "Chromium CDP automation backend for Vox (narrow session API over chromiumoxide)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chromiumoxide = "0.9.1"
chromiumoxide_cdp = "0.9.1"
futures = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
