[package]
name = "vox-browser"
description = "Chromium CDP automation backend for Vox (narrow session API over chromiumoxide)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chromiumoxide = "0.9.1"
chromiumoxide_cdp = "0.9.1"
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
workspace-hack = { workspace = true }

[lints]
workspace = true
