[package]
name = "vox-build-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time metadata generator for feature capability manifest."

[features]
gpu = []
oratio = []
oratio-mic = []
script-execution = []
mens-candle-cuda = []
cloud = []
execution-api = []
stub-check = []
populi = []

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
