[package]
name = "vox-build-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time metadata generator for feature capability manifest."

[features]
# vox-build-meta's feature stubs have been retired. Optional capabilities are
# now installable plugins managed by `vox plugin install <id>`. See
# crates/vox-plugin-catalog/catalog.toml and
# docs/src/architecture/plugin-system-redesign-2026.md.

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
