[package]
name = "vox-capability-registry"
description = "Machine-readable capability descriptors for Mens chat tool allowlists (OpenAI/MCP parity)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
