[package]
name = "vox-capability-registry"
description = "Transport-independent capability registry (YAML SSOT) + Mens chat tool descriptors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
