[package]
name = "vox-checksum-manifest"
version.workspace = true
edition.workspace = true
description = "SHA-256 release asset verification against checksums.txt manifests (shared by vox-cli and vox-bootstrap)."
license.workspace = true
repository.workspace = true

[dependencies]
sha2 = { workspace = true }
workspace-hack = { workspace = true }

[lints]
workspace = true
