[package]
name = "vox-claim-extractor"
description = "SCIENTIA claim extraction pipeline: VeriScore verifiability gate, atomic decomposition, span integrity, MiniCheck verification (T1→T2 promotion)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
vox-research-events = { workspace = true }
vox-constrained-gen = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
workspace-hack = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
