[package]
name = "vox-clavis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Central secret resolution and compatibility adapters for Vox."

[features]
default = []
clavis-infisical = []
clavis-vault = []

[dependencies]
secrecy = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true }
vox-bounded-fs = { workspace = true }
turso = { workspace = true }
blake3 = { workspace = true }
aes-gcm = "0.10"
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[lints]
workspace = true
