[package]
name = "vox-cli-ci"
description = "vox CLI 'ci' subcommand dispatcher and implementations (sync-ignore-files, secret-env-guard, generate-plugin-catalog-docs, etc.). NOTE: Implementation files remain in vox-cli/src/commands/ci/ due to heavy bidirectional coupling with vox-cli internals (bounded_read used by 25+ vox-cli modules, VoxCliRoot, artifact_policy, command_registry_model, scientia_ledger_contract). This crate exists as a workspace boundary marker and re-exports the public dispatch entry point once the coupling is resolved."
version.workspace = true
edition.workspace = true

[dependencies]
workspace-hack = { workspace = true }

[lints]
workspace = true
