[package]
name = "vox-cli-core"
version.workspace = true
edition.workspace = true

[dependencies]
vox-db = { workspace = true }
vox-secrets = { workspace = true }
vox-repository = { workspace = true }
vox-gamify = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
owo-colors = { workspace = true }
anyhow = { workspace = true }
