[package]
name = "vox-cli"
version.workspace = true
edition.workspace = true
description = "Vox command-line interface: compile, run, bundle, and workspace diagnostics."
# `cargo run -p vox-cli` without `--bin` (binaries: `vox`, `vox-compilerd`, `vox-mens` when `mens-base`).
default-run = "vox"

[[bin]]
name = "vox"
path = "src/main.rs"

[[bin]]
name = "vox-compilerd"
path = "src/bin/vox-compilerd.rs"

# Thin entrypoint: `vox-mens train` ≡ `vox schola train` (inserts the `mens` subcommand).
[[bin]]
name = "vox-mens"
path = "src/bin/vox-mens.rs"
required-features = ["mens-base"]

[features]
default = ["mens-base"]
# Corpus paths, `train-uv`, plan (daemon), status, eval-gate, bench-completion, system-prompt-template.
# Does **not** include Oratio (Candle Whisper stack) — use **`oratio`** for **`vox oratio`** / **`vox speech`**.
mens-base = []
# Enables Arca telemetry replay and persistent DB features (shared with vox-corpus).
database = ["vox-corpus/database"]
# Speech-to-text (`vox oratio`, `vox speech`); pulls heavy `vox-oratio` / Candle deps.
oratio = ["mens-base", "dep:vox-oratio"]
# Native Burn LoRA training + HF metadata (`vox schola train`, probe, merge-weights, eval-local).
gpu = [
    "mens-base",
    "dep:vox-populi",
    "vox-populi/mens",
    "vox-populi/mens-train",
    "vox-populi/mens-hf-hub",
    "dep:vox-tensor",
    "vox-tensor/train",
]
# Back-compat alias: `gpu` already enables Candle QLoRA (native `--backend qlora`).
mens-qlora = ["gpu"]
# Candle qlora on NVIDIA CUDA (requires CUDA toolkit when compiling `candle-core`).
mens-candle-cuda = ["gpu", "vox-populi/mens-candle-qlora-cuda"]
# Candle qlora on Apple Metal (macOS only).

# Cloud GPU training/serving dispatch (Vast.ai, RunPod).
cloud = ["gpu", "vox-populi/mens-cloud"]
# Inline `vox run` script compilation (native / WASI + Wasmtime) and OS sandbox helpers.
script-execution = [
    "dep:dirs",
    "dep:twox-hash",
    "dep:which",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:landlock",
    "dep:win32job",
]
# Axum inference server (`vox mens serve`) + REST execution API; implies `script-execution`.
execution-api = ["script-execution", "gpu", "dep:axum", "dep:tokio-stream"]
# TOESTUB + `commands::diagnostics` (`vox stub-check` shim, architect/clean/compact, Codex persistence in stub_check).
stub-check = [
    "dep:vox-toestub",
    "dep:toml",
    "dep:dirs",
    "dep:vox-ludus",
]
# No-op reserved flag: legacy `vox mens` agent/dei/chat/learn and `runtime/info/status` referred to excluded `vox-dei`.
# Dashboard UX is the VS Code extension (see `docs/src/ref-cli.md`).
dashboard = []
# Pulls `vox-ars` + `vox-skills` for OpenClaw / skill registry (`openclaw`, ARS extras).
ars = ["dep:vox-ars", "dep:vox-skills"]
# Ludus gamification CLI (`commands::extras::ludus`); implies `vox-ludus` (uses `vox-db`).
extras-ludus = ["dep:vox-ludus", "dep:vox-toestub"]
# Terminal live event dashboard: `vox live` + `commands::live` (in-process `vox-orchestrator` demo bus).
live = ["dep:vox-orchestrator"]
# Manage the DEI (Distributed Execution Intelligence) orchestrator.
dei = ["dep:vox-orchestrator"]
# BYOK / config slices in `mens status`, extended `vox doctor`, scope checks (`vox_eval`).
codex = [
    "dep:dirs",
    "dep:vox-eval",
]
# Extended DeI surfaces: generate, review, workflow, check, fix (`vox mens …`).
# Pulls `vox-tensor` for the legacy in-process dogfood trainer (`crate::training::native`).
mens-dei = ["dep:vox-tensor", "vox-tensor/train"]
# GitHub CodeRabbit batch PRs (`vox review coderabbit …`).
coderabbit = [
    "dep:vox-forge",
    "dep:vox-git",
    "dep:blake3",
    "dep:toml",
    "dep:vox-toestub",
]
# v0.dev React islands: `vox island generate|upgrade|list|add|cache` (`islands/`, `V0_API_KEY`).
island = ["dep:comfy-table", "dep:dirs", "dep:which"]
# Local populi registry + `vox populi status|serve` (`vox-populi` / optional HTTP control plane).
populi = ["dep:vox-populi", "vox-populi/transport"]
# Interpreted `vox mens workflow run` (journal + mens activities); implies mens hooks.
workflow-runtime = ["mens-dei", "dep:vox-workflow-runtime", "vox-workflow-runtime/mens"]
# Stub for non-functional inference server when refactoring or debugging.
broken_inference_stub = []

[dependencies]
vox-compiler = { workspace = true }
vox-ssg = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
base64 = { workspace = true }
vox-pm = { workspace = true }
vox-ars = { workspace = true, optional = true }
vox-skills = { workspace = true, optional = true }
vox-ludus = { workspace = true, optional = true }
vox-config = { workspace = true }
vox-db = { path = "../vox-db" }
vox-publisher = { path = "../vox-publisher" }
vox-doc-inventory = { path = "../vox-doc-inventory" }
vox-toestub = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
vox-orchestrator = { workspace = true, optional = true }
vox-populi = { workspace = true, optional = true }
vox-workflow-runtime = { workspace = true, optional = true }
vox-repository = { workspace = true }
turso = { workspace = true }
logos = { workspace = true }
owo-colors = { workspace = true }
comfy-table = { workspace = true, optional = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
vox-corpus = { workspace = true }
vox-tensor = { workspace = true, optional = true }
vox-runtime = { workspace = true }
vox-scaling-policy = { workspace = true }
vox-protocol = { workspace = true }
vox-oratio = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"] }
notify = "7"
axum = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", optional = true }
dirs = { version = "6", optional = true }
walkdir = "2"
vox-eval = { workspace = true, optional = true }
vox-forge = { workspace = true, optional = true, features = ["github"] }
vox-git = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
twox-hash = { version = "2", optional = true }
which = { version = "8", optional = true }
wasmtime = { version = "42.0.1", optional = true }
wasmtime-wasi = { version = "42.0.1", optional = true }
flate2 = "1.1.9"
tar = "0.4.45"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4.4", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
win32job = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
safetensors = { workspace = true }
tempfile = { workspace = true }
vox-orchestrator = { workspace = true }

[[test]]
name = "live_feature_wiring"
path = "tests/live_feature_wiring.rs"
required-features = ["live"]

[[test]]
name = "run_mode_dispatch"
path = "tests/run_mode_dispatch.rs"
required-features = ["script-execution"]

[[test]]
name = "workflow_populi_golden"
path = "tests/workflow_populi_golden.rs"
required-features = ["workflow-runtime"]

[lints]
workspace = true
