[package]
name = "vox-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Vox command-line interface: compile, run, bundle, and workspace diagnostics."
# `cargo run -p vox-cli` without `--bin` (binaries: `vox`, `vox-compilerd`, `vox-mens` when `mens-base`).
default-run = "vox"

[package.metadata.wix]
upgrade-guid = "81F3E1E5-8B6D-484F-B19F-8CA168016428"
path-guid = "5B1C6196-857D-409A-8758-BD4CE99BE7BB"
license = false

[package.metadata.deb]
maintainer = "Vox Foundation <contact@vox-foundation.org>"
copyright = "2026, Vox Foundation"
depends = "$auto"

[[bin]]
name = "vox"
path = "src/main.rs"

[[bin]]
name = "vox-compilerd"
path = "src/bin/vox-compilerd.rs"



[features]
default = []
# Fast fuzzy ranking for command catalog, MCP tool picker, dashboard palette.
# Uses nucleo-matcher (same scorer as Helix/Zed). Adds ~300KB to binary.
fuzzy-search = ["dep:nucleo"]
# Corpus paths, `train-uv`, plan (daemon), status, eval-gate, bench-completion, system-prompt-template.
# Does **not** include Oratio (Candle Whisper stack) — use **`oratio`** for **`vox oratio`** / **`vox speech`**.
# Does **not** include Oratio (Candle Whisper stack) — use **`oratio`** for **`vox oratio`** / **`vox speech`**.
# Native MCP server runtime previously in vox-mcp binary
mcp-server = ["vox-orchestrator/mcp-native", "dep:axum"]
# Enables Arca telemetry replay and persistent DB features (shared with vox-corpus).
database = ["vox-corpus/database"]




# Inline `vox run` script compilation (native / WASI + Wasmtime) and OS sandbox helpers.
script-execution = [
    "dep:xxhash-rust",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:landlock",
    "dep:win32job",
]
# Axum inference server (`vox mens serve`) + REST execution API; implies `script-execution`.
execution-api = ["script-execution", "dep:axum", "dep:tokio-stream"]
# TOESTUB + `commands::diagnostics` (`vox stub-check` shim, architect/clean/compact, Codex persistence in stub_check).
stub-check = [
    "dep:vox-toestub",
    "dep:vox-ludus",
]
# Merge `vox-toestub` victory-claim / premature-done heuristics into `vox ci completion-audit` (CI enables this).
completion-toestub = ["dep:vox-toestub"]
# No-op reserved flag: legacy `vox mens` agent/dei/chat/learn and `runtime/info/status` referred to `vox-dei` (still do not add `vox-dei` as a dependency; see `vox ci no-vox-dei-import`).
# Dashboard UX is the VS Code extension (see `docs/src/reference/cli.md`).
dashboard = ["dep:vox-dashboard"]
# OpenClaw / skill registry (`openclaw`); `vox-skills` carries the ARS shim; `vox-ars` is the migration facade.
ars = ["dep:vox-skills", "dep:vox-ars"]
# Ludus gamification CLI (`commands::extras::ludus`); implies `vox-ludus` (uses `vox-db`).
extras-ludus = ["dep:vox-ludus", "dep:vox-toestub"]
# Ludus terminal HUD over the in-process orchestrator bulletin (`vox ludus hud`).
ludus-hud = ["extras-ludus"]
# Terminal live event dashboard: `vox live` + `commands::live` (in-process `vox-orchestrator` demo bus).
live = []
# Manage the DEI (Distributed Execution Intelligence) orchestrator.
dei = []
# DEI training and AI operations (mens).
mens-dei = ["dei", "database"]
# Interpreted workflow journal + activities.
workflow-runtime = ["mens-dei", "dep:vox-workflow-runtime"]
# BYOK / config slices in `mens status`, extended `vox doctor`, scope checks (`vox_eval`).
codex = []

# GitHub CodeRabbit batch PRs (`vox review coderabbit …`).
coderabbit = [
    "dep:vox-forge",
    "dep:vox-git",
    "dep:blake3",
    "dep:vox-toestub",
]
# v0.dev React islands: `vox island generate|upgrade|list|add|cache` (`islands/`, `V0_API_KEY`).
island = []

# Stub for non-functional inference server when refactoring or debugging.
# Enables all social platform adapters for publication and diagnostics.
scientia-social = [
    "vox-publisher/scientia-reddit",
    "vox-publisher/scientia-twitter",
    "vox-publisher/scientia-linkedin",
    "vox-publisher/scientia-mastodon",
    "vox-publisher/scientia-bluesky",
    "vox-publisher/scientia-discord",
    "vox-publisher/scientia-opencollective",
    "vox-publisher/live-api-canary"
]
broken_inference_stub = []

[dependencies]
vox-compiler = { workspace = true }
vox-ssg = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
vox-reqwest-defaults = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
vox-cli-core = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
vox-pm = { workspace = true }
vox-container = { workspace = true }
vox-wasm-host = { workspace = true }
vox-deploy-codegen = { workspace = true }
vox-skills = { workspace = true, optional = true }
vox-ars    = { workspace = true, optional = true }
vox-ludus = { workspace = true, optional = true }
vox-config = { workspace = true }
vox-clavis = { workspace = true }
vox-db = { workspace = true }
vox-search = { workspace = true }
vox-plugin-publication = { workspace = true }
# Scholarly / DB-backed jobs only; Reddit/YouTube adapter code stays out of default CLI compile.
vox-publisher = { workspace = true, default-features = false, features = ["scholarly-external-jobs"] }
vox-doc-inventory = { workspace = true }
vox-toestub = { workspace = true, optional = true }
toml = { workspace = true }
vox-doc-pipeline = { path = "../vox-doc-pipeline" }
vox-orchestrator = { workspace = true }
vox-plugin-catalog = { workspace = true }
vox-plugin-host = { workspace = true }
vox-populi = { workspace = true }
vox-mesh-types = { workspace = true }
vox-workflow-runtime = { workspace = true, optional = true }
vox-dashboard = { workspace = true, optional = true }

vox-repository = { workspace = true }
vox-project-scaffold = { workspace = true }
vox-checksum-manifest = { workspace = true }
vox-install-policy = { workspace = true }
turso = { workspace = true }
owo-colors = { workspace = true }
comfy-table = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
# `external_review_replay::extract_external_review_rows` is behind `database`; CLI `corpus review-export` needs it.
vox-corpus = { workspace = true, features = ["database", "ast-extract"] }

vox-runtime = { workspace = true }
vox-primitives = { workspace = true }
vox-exec-grammar = { workspace = true }
vox-scaling-policy = { workspace = true }
vox-bounded-fs = { workspace = true, features = ["async"] }
vox-jsonschema-util = { workspace = true }
vox-protocol = { workspace = true }
vox-constrained-gen = { workspace = true }
rand = { workspace = true }

uuid = { version = "1.22.0", features = ["v4"] }
vox-mcp-registry = { path = "../vox-mcp-registry" }
vox-capability-registry = { path = "../vox-capability-registry" }
rmcp = { version = "0.16", features = ["server", "client", "transport-io"] }
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "json", "tokio", "ws"] }
governor = { workspace = true }
vox-grammar-export = { workspace = true }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
notify = "7"
tokio-stream = { version = "0.1", optional = true }
dirs = { version = "6" }
walkdir = "2"
sysinfo = { workspace = true }
vox-eval = { workspace = true }
vox-forge = { workspace = true, optional = true, features = ["github", "gitlab"] }
vox-git = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
xxhash-rust = { workspace = true, optional = true }
which = "8"
wasmtime = { version = "42.0.1", optional = true }
wasmtime-wasi = { version = "42.0.1", optional = true }
flate2 = "1.1.9"
tar = "0.4.45"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
self_update = { version = "0.43.1", default-features = false, features = [
    "reqwest",
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
semver = "1"
keyring.workspace = true
workspace-hack = { workspace = true }
vox-identity.workspace = true
vox-crypto.workspace = true
hex = "0.4.3"
nucleo = { workspace = true, optional = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4.4", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
win32job = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
safetensors = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
vox-db = { workspace = true }
vox-orchestrator = { workspace = true }

[[test]]
name = "live_feature_wiring"
path = "tests/live_feature_wiring.rs"
required-features = ["live"]

[[test]]
name = "run_mode_dispatch"
path = "tests/run_mode_dispatch.rs"
required-features = ["script-execution"]

[[test]]
name = "workflow_populi_golden"
path = "tests/workflow_populi_golden.rs"
required-features = ["workflow-runtime"]

[[test]]
name = "workflow_cli_durability_ux"
path = "tests/workflow_cli_durability_ux.rs"
required-features = ["mens-dei"]

[lints]
workspace = true
