[package]
name = "vox-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Vox command-line interface: compile, run, bundle, and workspace diagnostics."
# `cargo run -p vox-cli` without `--bin` (binaries: `vox`, `vox-compilerd`, `vox-ml-cli` when `mens-base`).
default-run = "vox"

[package.metadata.wix]
upgrade-guid = "81F3E1E5-8B6D-484F-B19F-8CA168016428"
path-guid = "5B1C6196-857D-409A-8758-BD4CE99BE7BB"
license = false

[package.metadata.deb]
maintainer = "Vox Foundation <contact@vox-foundation.org>"
copyright = "2026, Vox Foundation"
depends = "$auto"

[[bin]]
name = "vox"
path = "src/main.rs"

[[bin]]
name = "vox-compilerd"
path = "src/bin/vox-compilerd.rs"



[features]
default = []
ai-fixtures-v1 = []
# Fast fuzzy ranking for command catalog, MCP tool picker, dashboard palette.
# Uses nucleo-matcher (same scorer as Helix/Zed). Adds ~300KB to binary.
fuzzy-search = ["dep:nucleo"]
# Corpus paths, `train-uv`, plan (daemon), status, eval-gate, bench-completion, system-prompt-template.
# Does **not** include Oratio (Candle Whisper stack) — use **`oratio`** for **`vox oratio`** / **`vox speech`**.
# Does **not** include Oratio (Candle Whisper stack) — use **`oratio`** for **`vox oratio`** / **`vox speech`**.
# Native MCP server runtime previously in vox-mcp binary
mcp-server = [
    "vox-orchestrator/populi-transport",
    "vox-orchestrator-mcp/populi-transport",
    "dep:rmcp",
    "dep:vox-orchestrator-mcp",
]
# Enables Arca telemetry replay and persistent DB features (shared with vox-corpus).
database = ["vox-corpus/database"]




# Inline `vox run` script compilation (native / WASI + Wasmtime) and OS sandbox helpers.
script-execution = [
    "dep:xxhash-rust",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:landlock",
    "dep:win32job",
]
# Axum inference server (`vox mens serve`) + REST execution API; implies `script-execution`.
execution-api = ["script-execution", "dep:tokio-stream"]
# TOESTUB + `commands::diagnostics` (`vox stub-check` shim, architect/clean/compact, Codex persistence in stub_check).
stub-check = [
    "dep:vox-code-audit",
    "dep:vox-gamify",
]
# Merge `vox-code-audit` victory-claim / premature-done heuristics into `vox ci completion-audit` (CI enables this).
completion-toestub = ["dep:vox-code-audit"]
# No-op reserved flag: legacy `vox mens` agent/dei/chat/learn and `runtime/info/status` referred to `vox-dei` (still do not add `vox-dei` as a dependency; see `vox ci no-vox-dei-import`).
# Dashboard UX is the VS Code extension (see `docs/src/reference/cli.md`).
# Native Tauri 2 GUI (replaces dashboard SPA)
gui = []
# OpenClaw / skill registry (`openclaw`); ARS runtime types live in `vox-openclaw-runtime`; `vox-skills` is the marketplace registry.
ars = ["dep:vox-skills", "dep:vox-openclaw-runtime"]
# Ludus gamification CLI (`commands::extras::ludus`); implies `vox-gamify` (uses `vox-db`).
extras-ludus = ["dep:vox-gamify", "dep:vox-code-audit"]
# Ludus terminal HUD over the in-process orchestrator bulletin (`vox ludus hud`).
ludus-hud = ["extras-ludus"]
# Terminal live event dashboard: `vox live` + `commands::live` (in-process `vox-orchestrator` demo bus).
live = []
# Manage the DEI (Distributed Execution Intelligence) orchestrator.
dei = []
# DEI training and AI operations (mens).
mens-dei = ["dei", "database"]
# Interpreted workflow journal + activities.
workflow-runtime = ["mens-dei", "dep:vox-workflow-runtime"]
# BYOK / config slices in `mens status`, extended `vox doctor`, scope checks (`vox_eval`).
codex = []

# GitHub CodeRabbit batch PRs (`vox review coderabbit …`).
coderabbit = [
    "dep:vox-forge",
    "dep:vox-git",
    "dep:blake3",
    "dep:vox-code-audit",
]
# Stub for non-functional inference server when refactoring or debugging.
# Enables all social platform adapters for publication and diagnostics.
scientia-social = [
    "vox-publisher/scientia-reddit",
    "vox-publisher/scientia-twitter",
    "vox-publisher/scientia-linkedin",
    "vox-publisher/scientia-mastodon",
    "vox-publisher/scientia-bluesky",
    "vox-publisher/scientia-discord",
    "vox-publisher/scientia-opencollective",
    "vox-publisher/live-api-canary",
    "vox-orchestrator/news-publish",
]
broken_inference_stub = []

[dependencies]
vox-compiler = { workspace = true }
vox-codegen = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
vox-http-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2.workspace = true
tokio = { workspace = true, features = ["io-std"] }
vox-cli-core = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
vox-package = { workspace = true }

vox-eval = { workspace = true }
vox-container = { workspace = true }
vox-wasm-engine = { workspace = true }
vox-deploy-codegen = { workspace = true }
vox-skills = { workspace = true, optional = true }
vox-openclaw-runtime = { workspace = true, optional = true }
vox-gamify = { workspace = true, optional = true }
vox-config = { workspace = true }
vox-secrets = { workspace = true }
vox-db = { workspace = true }
vox-research-events = { workspace = true }
# `vox-scientia::ro_crate::MainEntity` is the input shape for the replay
# handler; not pulled in via the producers crate.
vox-scientia = { workspace = true }
# Narrow retrieval features for CLI (avoid default qdrant/tavily stacks).
vox-search = { workspace = true, features = ["tantivy-lexical", "web-scrape"] }
# `vox-plugin-publication` is intentionally NOT a direct dep here. The CLI
# routes `db/publication/ingest.rs` through `vox-plugin-host`'s ABI surface
# (the `Publication` extension point on `VoxPlugin`) to keep the heavy
# `feed-rs` / `vox-publisher` transitive deps out of the default CLI build.
# Scholarly / DB-backed jobs only; Reddit/YouTube adapter code stays out of default CLI compile.
vox-publisher = { workspace = true, features = ["scholarly-external-jobs"] }
vox-doc-inventory = { workspace = true }
vox-code-audit = { workspace = true, optional = true }
vox-drift-check = { workspace = true }
# vox-drift-check uses vox-code-audit types; make it available for drift_check.rs
# (also already pulled in by optional features above; this avoids feature-gate conditional)

toml = { workspace = true }
vox-doc-pipeline = { path = "../vox-doc-pipeline" }
vox-orchestrator = { workspace = true }
vox-orchestrator-mcp = { workspace = true, optional = true }
vox-plugin-catalog = { workspace = true }
vox-plugin-host = { workspace = true }
# Needed to construct ROption / RString when dispatching into plugin extension
# trait methods (e.g. the Publication.ingest_tick signature).
abi_stable = { workspace = true }
vox-populi = { workspace = true }
vox-mesh-types = { workspace = true }
vox-workflow-runtime = { workspace = true, optional = true }

vox-repository = { workspace = true }
vox-project-scaffold = { workspace = true }
vox-tauri-codegen = { workspace = true }
turso = { workspace = true }
owo-colors = { workspace = true }
comfy-table = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
# `external_review_replay::extract_external_review_rows` is behind `database`; CLI `corpus review-export` needs it.
vox-corpus = { workspace = true, features = ["database", "ast-extract"] }

vox-actor-runtime = { workspace = true }
vox-foundation = { workspace = true }
vox-scaling-policy = { workspace = true }
vox-bounded-fs = { workspace = true, features = ["async"] }
vox-jsonschema-util = { workspace = true }
vox-constrained-gen = { workspace = true }
rand = { workspace = true }

uuid = { workspace = true, features = ["v4"] }
vox-mcp-registry = { path = "../vox-mcp-registry" }
vox-capability-registry = { path = "../vox-capability-registry" }
rmcp = { workspace = true, optional = true, features = ["server", "client", "transport-io"] }
axum = { workspace = true, features = ["http1", "json", "tokio", "ws"] }
governor = { workspace = true }
vox-grammar-export = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
notify = { workspace = true }
tokio-stream = { workspace = true, optional = true }
dirs = { workspace = true }
walkdir = { workspace = true }
sysinfo = { workspace = true }

vox-forge = { workspace = true, optional = true, features = ["github", "gitlab"] }
vox-git = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
xxhash-rust = { workspace = true, optional = true }
which = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
flate2.workspace = true
tar.workspace = true
zip = { features = ["deflate"], version = "2" }
self_update = { workspace = true, features = [
    "reqwest",
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
semver = { workspace = true }
keyring.workspace = true
workspace-hack = { workspace = true }
vox-rule-pack = { workspace = true }
vox-telemetry = { workspace = true }
vox-audit = { workspace = true }
vox-identity.workspace = true
vox-crypto.workspace = true
hex.workspace = true
nucleo = { workspace = true, optional = true }
tempfile = { workspace = true }
hyper-util.workspace = true
async-trait.workspace = true
thiserror.workspace = true
form_urlencoded = "1.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
win32job = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }

[build-dependencies]
vox-build-meta = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
safetensors = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
# Force deadpool's `rt_tokio_1` feature (see root Cargo.toml). wiremock pulls
# deadpool 0.12 without activating a runtime backend, which under rustc 1.92
# leaves `Runtime::timeout` returning the never type and breaks inference in
# `deadpool::unmanaged::Pool::timeout_get`.
deadpool = { workspace = true }
vox-db = { workspace = true }
vox-orchestrator = { workspace = true }

[[test]]
name = "live_feature_wiring"
path = "tests/live_feature_wiring.rs"
required-features = ["live"]

[[test]]
name = "run_mode_dispatch"
path = "tests/run_mode_dispatch.rs"
required-features = ["script-execution"]

[[test]]
name = "workflow_populi_golden"
path = "tests/workflow_populi_golden.rs"
required-features = ["workflow-runtime"]

[[test]]
name = "workflow_cli_durability_ux"
path = "tests/workflow_cli_durability_ux.rs"
required-features = ["mens-dei"]

[[test]]
name = "cr_l8_flywheel_e2e"
path = "tests/cr_l8_flywheel_e2e.rs"
required-features = ["completion-toestub"]

[lints]
workspace = true
