[package]
name = "vox-code-audit"
description = "AI code quality stub detector — finds stubs, magic values, empty bodies, missing references, and DRY violations"
version.workspace = true
edition.workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "visit", "parsing", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
walkdir = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
thiserror = { workspace = true }
similar = { workspace = true }
globset = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
vox-http-client = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
vox-scaling-policy = { workspace = true }
vox-secrets = { workspace = true }
vox-config = { workspace = true }
vox-bounded-fs = { workspace = true }
vox-orchestrator-types = { workspace = true }
vox-jsonschema-util = { workspace = true }
vox-rule-pack = { workspace = true }
vox-telemetry = { workspace = true }
workspace-hack = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

