[package]
name = "vox-codegen-rust"
version = "0.1.0"
edition.workspace = true

[dependencies]
vox-ast = { workspace = true }
vox-hir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
vox-test-harness = { workspace = true }
