[package]
name = "vox-codex-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vox-codex-dashboard"
path = "src/bin/codex_dashboard.rs"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
turso = { workspace = true }
vox-db = { path = "../vox-db" }
vox-oratio = { path = "../vox-oratio" }
vox-repository = { path = "../vox-repository" }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
