[package]
name = "vox-compiler-emit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Codegen + WebIR + vox_ir extracted from vox-compiler. Consumes analysis types from vox-compiler."
publish = false

[dependencies]
vox-compiler = { workspace = true }
workspace-hack = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
sha3 = { workspace = true }
flate2 = "1.1.9"
bzip2 = "0.6.1"
zstd = "0.13.3"
rust_decimal = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
vox-clavis = { workspace = true }
vox-config = { workspace = true }
vox-deploy-codegen = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
