[package]
name = "vox-compiler"
version.workspace = true
edition.workspace = true
description = "Unified Vox compiler crate containing lexer, parser, AST, HIR, typechecker, and codegen."

[dependencies]
logos = { workspace = true }
vox-eval = { workspace = true }
vox-grammar-export = { workspace = true }
vox-repository = { workspace = true }
vox-container = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
sha3 = { workspace = true }
flate2 = "1.1.9"
bzip2 = "0.6.1"
zstd = "0.13.3"
rust_decimal = { workspace = true }
chrono = { workspace = true }
vox-clavis = { path = "../vox-clavis" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
serial_test = { workspace = true }
vox-jsonschema-util = { path = "../vox-jsonschema-util" }

[lints]
workspace = true
